Straight 1.21.5 update (no fixes)